# Triangle_Intersection

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: workflow.yml
include/: bounding_box.h  cell.h  distances.h  intersects.h  interval.h  log.h  multi_inter.h  plane.h  segment.h  spatial_hash.h  status.h  t_inter.h  triangle.h  utils.h  vec.h
include/detail/: bounding_box.h  cell.h  distances.h  intersects.h  interval.h  plane.h  segment.h  triangle.h  utils.h  vec.h
src/: bounding_box.cpp  bounding_box.h  distances.cpp  distances.h  intersects.cpp  intersects.h  interval.h  multi_inter.cpp  plane.cpp  plane.h  segment.cpp  segment.h  spatial_hash.cpp  triangle.cpp  triangle.h  utils.cpp  utils.h  vec.cpp  vec.h  vec3.cpp  vec3.h
tests/bd_tests/: amount-100.ans
unit_tests/: CMakeLists.txt
unit_tests/src/: unit_tests.cpp
unit_tests/test_utils/: CMakeLists.txt
unit_tests/test_utils/include/: test_utils.h  test_utils_detail.h
unit_tests/test_utils/src/: test_utils.cpp
utils/include/: log.h
